# DescartesROS2

./: README.md
cell_envir/: CMakeLists.txt  package.xml  setup_assist_fact_robot.urdf
cell_envir/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_robot_description.srdf  my_robot_description.urdf.xacro
cell_envir/launch/: bringup.launch.py  display.launch.py  full.launch.py  simple.launch.py  trajectory.launch.py
cell_envir/src/: simple_traject.cpp
cell_envir/urdf/: cell_layout.xacro  fact_robot.xacro  robot.sdf
cell_envir/urdf/ensenso_description/: ensenso.xacro  ensenso_X200_Series.xacro
cell_envir/urdf/ensenso_description/stl_meshes/: X3x-5CP-200.stl:Zone.Identifier
cell_envir/urdf/gripper_description/: custom_gripper2.xacro  gripper_bi.stl  support2.stl
cell_envir/urdf/gripper_description/inertia_description/: inertia_table.xacro
cell_envir/urdf/material/: rviz_default_material.material
cell_envir/urdf/motoman_mh12_support/urdf/: mh12.xacro  mh12_macro.xacro
cell_envir/urdf/motoman_resources/urdf/: common_materials.xacro
cell_envir/urdf/piece_description/: frame_position.yaml  part1_updated.stl  piece_mesh.ply
cell_envir/urdf/plugins_description/: depth_camera_plugin.cc  pointcloud.xacro
cell_envir/world/: piece.sdf
descartes_core/: CMakeLists.txt  package.xml
descartes_core/include/descartes_core/: trajectory_id.h  trajectory_timing_constraint.h  utils.h
descartes_core/src/: trajectory_id.cpp
descartes_moveit/: CMakeLists.txt  package.xml
descartes_moveit/include/descartes_moveit/: ikfast_moveit_state_adapter.h  moveit_state_adapter.h  seed_search.h
descartes_moveit/src/: ikfast_moveit_state_adapter.cpp  moveit_state_adapter.cpp  plugin_init.cpp  seed_search.cpp
descartes_trajectory/: CMakeLists.txt  package.xml
descartes_trajectory/include/descartes_trajectory/: cart_trajectory_pt.h
descartes_trajectory/src/: cart_trajectory_pt.cpp
